--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="178dp"
         android:layout_height="39dp"
         android:layout_marginTop="150dp"
-        android:text="TextView"
+        android:text="sdfhbkdf"
         android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="bold"
