--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,4 +64,12 @@
         tools:layout_editor_absoluteX="86dp"
         tools:layout_editor_absoluteY="43dp" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="202dp"
+        tools:layout_editor_absoluteY="42dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
